--- a/ClientApp/src/app/ApoyoEconomico/persona-registro/persona-registro.component.html
+++ b/ClientApp/src/app/ApoyoEconomico/persona-registro/persona-registro.component.html
@@ -1,1 +1,55 @@
-<p>persona-registro works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2>Registro de Personas</h2>
+            <form >
+                                    
+                    <div class="form-group">
+                        <label>Identificacion</label>
+                        <input type="text"  name="identificacion"  [(ngModel)]="persona.identificacion" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Nombres</label>
+                        <input type="text"  name="nombres"  [(ngModel)]="persona.nombres" class="form-control" />
+                    </div>
+                     <div class="form-group">
+                         <label>Apellidos</label>
+                         <input type="text"  name="apellidos"  [(ngModel)]="persona.apellidos" class="form-control" />
+                       </div>
+                    <div class="form-group">
+                        <label>sexo</label>
+                        <input type="text"  name="sexo"  [(ngModel)]="persona.sexo" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Edad</label>
+                        <input type="number"  name="edad"  [(ngModel)]="persona.edad" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label>Departamento</label>
+                        <input type="string"  name="departamento"  [(ngModel)]="persona.departamento" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                            <label>Ciudad</label>
+                            <input type="string"  name="ciudad"  [(ngModel)]="persona.ciudad" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                             <label>Valor apoyo</label>
+                             <input type="number"  name="valorApoyo"  [(ngModel)]="persona.valorApoyo" class="form-control" />
+                       </div>
+                    <div class="form-group">
+                          <label>Modalidad</label>
+                          <input type="string"  name="modalidad"  [(ngModel)]="persona.modalidad" class="form-control" />
+                      </div>
+                     <div class="form-group">
+                           <label>Fecha</label>
+                           <input type="Date"  name="fecha"  [(ngModel)]="persona.fecha" class="form-control" />
+                      </div>
+                    <div class="text-center">
+                        <button class="btn btn-primary mr-1"(click)="add()">Register</button>
+                        <button class="btn btn-secondary" type="reset">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
